# recruiter-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
recruiter/: __main__.py  cli.py  extract.py  fetcher.py  scoring.py  settings.py  ui.py
recruiter/explore/: __init__.py  monitor.py
recruiter/explore/handlers/: __init__.py  github.py  stub.py  web.py  youtube.py
recruiter/handlers/: __init__.py  base.py  github.py  stub.py  web.py  youtube.py
resumekit/: __main__.py  cli.py  extract.py  fetcher.py  models.py  scoring.py  settings.py  ui.py
resumekit/explore/: __init__.py  monitor.py
resumekit/explore/handlers/: __init__.py  github.py  stub.py  web.py  youtube.py
resumekit/handlers/: __init__.py  base.py  github.py  stub.py  web.py  youtube.py
roles/: [US] Software Engineer Intern (General).md
